[gd_scene load_steps=8 format=2]

[ext_resource path="res://menu/menu_credits.gd" type="Script" id=1]
[ext_resource path="res://themes/font/credits_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://menu/credits_scroll_container.gd" type="Script" id=5]
[ext_resource path="res://themes/font/credits_normal.tres" type="DynamicFont" id=6]
[ext_resource path="res://themes/font/credits_bold.tres" type="DynamicFont" id=7]
[ext_resource path="res://gui/utils/button_click_sound_utils.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_top = 40
border_width_bottom = 40
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[node name="MenuCredits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Forground" type="CanvasLayer" parent="."]

[node name="CenterH" type="HBoxContainer" parent="Forground"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="space" type="Control" parent="Forground/CenterH"]
margin_right = 136.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterV" type="VBoxContainer" parent="Forground/CenterH"]
margin_left = 140.0
margin_right = 1140.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0

[node name="space3" type="Control" parent="Forground/CenterH/CenterV"]
margin_right = 1000.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreditsContainer" type="VBoxContainer" parent="Forground/CenterH/CenterV"]
margin_top = 93.0
margin_right = 1000.0
margin_bottom = 627.0
rect_min_size = Vector2( 1000, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vSeparator1" type="Control" parent="Forground/CenterH/CenterV/CreditsContainer"]
margin_right = 1000.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="CreditsScrollContainer" type="Panel" parent="Forground/CenterH/CenterV/CreditsContainer"]
margin_top = 34.0
margin_right = 1000.0
margin_bottom = 466.0
rect_clip_content = true
mouse_filter = 2
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": "the panel is used to add border up and down to do the fade in / out effect. It is also use to clip content"
}

[node name="VBoxContainer" type="VBoxContainer" parent="Forground/CenterH/CenterV/CreditsContainer/CreditsScrollContainer"]
show_behind_parent = true
anchor_right = 1.0
margin_bottom = 340.0
size_flags_horizontal = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Forground/CenterH/CenterV/CreditsContainer/CreditsScrollContainer/VBoxContainer"]
margin_right = 1000.0
margin_bottom = 24.0
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "menu.credits.main"
text = "menu.credits.main"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Forground/CenterH/CenterV/CreditsContainer/CreditsScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 1000.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Forground/CenterH/CenterV/CreditsContainer/CreditsScrollContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 1000.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 6 )
text = "menu.credits.third_party_licenses"

[node name="LabelGodotLicence" type="Label" parent="Forground/CenterH/CenterV/CreditsContainer/CreditsScrollContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 1000.0
margin_bottom = 127.0
custom_fonts/font = ExtResource( 4 )
text = "menu.credits.legal_notice_godot"
autowrap = true

[node name="vSeparator2" type="Control" parent="Forground/CenterH/CenterV/CreditsContainer"]
margin_top = 470.0
margin_right = 1000.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 30 )

[node name="BackMainMenu" type="Button" parent="Forground/CenterH/CenterV/CreditsContainer"]
margin_left = 200.0
margin_top = 504.0
margin_right = 800.0
margin_bottom = 534.0
rect_min_size = Vector2( 600, 30 )
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.5
text = "menu.credits.back_main_menu"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="space4" type="Control" parent="Forground/CenterH/CenterV"]
margin_top = 631.0
margin_right = 1000.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="space2" type="Control" parent="Forground/CenterH"]
margin_left = 1144.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
